--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title> TypeScript and Sass Webpack Boilerplate </title>
+      <title> Soltys game! </title>
       <link rel="stylesheet" href="build/app.css" media="screen" title="no title">
   </head>
   <body>
