--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel='stylesheet' id='wpex-google-font-fira-sans-css' href='//fonts.googleapis.com/css?family=Fira+Sans%3A100%2C200%2C300%2C400%2C500%2C600%2C700%2C800%2C900100italic%2C200italic%2C300italic%2C400italic%2C500italic%2C600italic%2C700italic%2C800italic%2C900italic&#038;subset=latin&#038;ver=4.6.1'
     type='text/css' media='all' />
   <style>
-   
+
   </style>
   <link rel="stylesheet" href="build/app.css" media="screen" title="no title">
 </head>
@@ -22,8 +22,13 @@
     <div id="left-side">
       <h2>Controls (keyboard)</h2>
       <p><kbd>	&larr;</kbd> <kbd>&uarr;</kbd> <kbd>	&darr;</kbd> <kbd>&rarr;</kbd> - Controls your ship</p>
+      <p><kbd>W</kbd> - Grow your ship</p>
+      <p><kbd>S</kbd> - Shrink your ship</p>
       <h2>Controls (gamepad - tested only on Xbox 360)</h2>
-      <p>Left stick movement<p>
+      <p>Left stick movement</p>
+
+      <p class="xbox-row"><span class="xbox-button xbox-button-green">A</span> <span class="xbox-description"> Grow your ship</span></p>
+      <p class="xbox-row"><span class="xbox-button xbox-button-red">B</span> <span class="xbox-description"> Shrink your ship</span></p>
     </div>
     <div id="gameHost"></div>
     <div id="right-side">&nbsp;</div>
