finshing controls description

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 
 <body>
   <div id="header">
-    <h1> The Ship Game</h1>
+    <h1>🕹 The Ship Game 🕹</h1>
   </div>
   <div id="row">
     <div id="left-side">
-      <h2>Controls (keyboard)</h2>
+      <h2>Controls (⌨ keyboard)</h2>
       <p><kbd>	&larr;</kbd> <kbd>&uarr;</kbd> <kbd>	&darr;</kbd> <kbd>&rarr;</kbd> - Controls your ship</p>
       <p><kbd>W</kbd> - Grow your ship</p>
       <p><kbd>S</kbd> - Shrink your ship</p>
-      <h2>Controls (gamepad - tested only on Xbox 360)</h2>
-      <p>Left stick movement</p>
+      <h2>Controls (🎮 gamepad - tested only with Xbox 360)</h2>
+      <p class="xbox-row"><img src="assets/site/stick.png" /> <span class="xbox-description">Left stick movement</span></p>
 
       <p class="xbox-row"><span class="xbox-button xbox-button-green">A</span> <span class="xbox-description"> Grow your ship</span></p>
       <p class="xbox-row"><span class="xbox-button xbox-button-red">B</span> <span class="xbox-description"> Shrink your ship</span></p>
@@ -34,7 +34,7 @@
     <div id="right-side">&nbsp;</div>
   </div>
   <div id="footer">
-    <p><a href="http://blog.soltysiak.it" title="blog">Paweł Sołtysiak</a> - 2016-2017</p>
+    <p><a href="http://blog.soltysiak.it" title="blog">📓 Paweł Sołtysiak</a> - 2016-2017</p>
   </div>
   <script src='build/app.js'></script>
 </body>
