--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
       <p class="xbox-row"><span class="xbox-button xbox-button-red">B</span> <span class="xbox-description"> Shrink your ship</span></p>
     </div>
     <div id="gameHost"></div>
-    <div id="right-side">&nbsp;</div>
+    <div id="right-side">
+      <h2>Physics look-up</h2>
+      <div id="physicsHost"></div>
+    </div>
   </div>
   <div id="footer">
     <p><a href="http://blog.soltysiak.it" title="blog">📓 Paweł Sołtysiak</a> - 2016-2017</p>
