--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
       <p><kbd>S</kbd> - Shrink your ship</p>
       <h2>Controls (🎮 gamepad - tested only with Xbox 360)</h2>
       <p class="xbox-row"><img src="assets/site/stick.png" /> <span class="xbox-description">Left stick movement</span></p>
-
+      <p class="xbox-row"> <img src="assets/site/lb_button.png" /> <img src="assets/site/rb_button.png" />  <span class="xbox-description">Strafe left/right movement</span></p>
       <p class="xbox-row"><span class="xbox-button xbox-button-green">A</span> <span class="xbox-description"> Grow your ship</span></p>
       <p class="xbox-row"><span class="xbox-button xbox-button-red">B</span> <span class="xbox-description"> Shrink your ship</span></p>
+
     </div>
     <div id="gameHost"></div>
     <div id="right-side">
