fixes for mobiles phones

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     type='text/css' media='all' />
   <link rel='stylesheet' id='wpex-google-font-fira-sans-css' href='//fonts.googleapis.com/css?family=Fira+Sans%3A100%2C200%2C300%2C400%2C500%2C600%2C700%2C800%2C900100italic%2C200italic%2C300italic%2C400italic%2C500italic%2C600italic%2C700italic%2C800italic%2C900italic&#038;subset=latin&#038;ver=4.6.1'
     type='text/css' media='all' />
-  <style>
+  <meta name="viewport" content="width=600,height=750">
 
-  </style>
+
   <link rel="stylesheet" href="build/app.css" media="screen" title="no title">
 </head>
 
