--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div id="gameHost"></div>
     <div id="right-side">
-      <div id="example"></div>
+      <div id="options"></div>
     </div>
   </div>
   <div id="footer">
