--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
   </div>
   <div id="row">
     <div id="left-side">
+      <div id="fps-counter"></div>
       <h2>Controls (⌨ keyboard)</h2>
       <p><kbd>	&larr;</kbd> <kbd>&uarr;</kbd> <kbd>	&darr;</kbd> <kbd>&rarr;</kbd> - Controls your ship</p>
       <p><kbd>W</kbd> - Grow your ship</p>
       <p><kbd>S</kbd> - Shrink your ship</p>
       <h2>Controls (🎮 gamepad - tested only with Xbox 360)</h2>
       <p class="xbox-row"><img src="assets/site/stick.png" /> <span class="xbox-description">Left stick movement</span></p>
-      <p class="xbox-row"> <img src="assets/site/lb_button.png" /> <img src="assets/site/rb_button.png" />  <span class="xbox-description">Strafe left/right movement</span></p>
+      <p class="xbox-row"> <img src="assets/site/lb_button.png" /> <img src="assets/site/rb_button.png" /> <span class="xbox-description">Strafe left/right movement</span></p>
       <p class="xbox-row"><span class="xbox-button xbox-button-green">A</span> <span class="xbox-description"> Grow your ship</span></p>
       <p class="xbox-row"><span class="xbox-button xbox-button-red">B</span> <span class="xbox-description"> Shrink your ship</span></p>
 
@@ -38,11 +39,11 @@
     <p><a href="http://blog.soltysiak.it" title="blog">📓 Paweł Sołtysiak</a> - 2016-2017</p>
   </div>
   <!-- Dependencies -->
-        <script src="./node_modules/react/dist/react.js"></script>
-        <script src="./node_modules/react-dom/dist/react-dom.js"></script>
-        <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
+  <script src="./node_modules/react/dist/react.js"></script>
+  <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+  <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
 
-        <!-- Main -->
+  <!-- Main -->
   <script src='build/app.js'></script>
 </body>
 
