--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <p><a href="http://blog.soltysiak.it" title="blog">📓 Paweł Sołtysiak</a> - 2016-2017</p>
   </div>
   <!-- Dependencies -->
-  <script src="./node_modules/react/dist/react.js"></script>
-  <script src="./node_modules/react-dom/dist/react-dom.js"></script>
-  <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
+  <script src="node_modules/react/dist/react.js"></script>
+  <script src="node_modules/react-dom/dist/react-dom.js"></script>
+  <script src="node_modules/pixi.js/dist/pixi.min.js"></script>
 
   <!-- Main -->
   <script src='build/app.js'></script>
