--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <p><a href="http://blog.soltysiak.it" title="blog">📓 Paweł Sołtysiak</a> - 2016-2017</p>
     </div>
     <!-- Dependencies -->
-    <script src="./node_modules/react/dist/react.min.js"></script>
-    <script src="./node_modules/react-dom/dist/react-dom.min.js"></script>
+    <script src="./node_modules/react/umd/react.production.min.js"></script>
+    <script src="./node_modules/react-dom/umd/react-dom.production.min.js"></script>
     <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
 
     <!-- Main -->
