--- a/Game/index.html
+++ b/Game/index.html
@@ -44,6 +44,8 @@
     <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
 
     <!-- Main -->
+    <script src='build/core.js'></script>
+    <script src='build/base.js'></script>
     <script src='build/app.js'></script>
 </body>
 
